--- a/VSSProgExercises/.classpath
+++ b/VSSProgExercises/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="srcEx02"/>
 	<classpathentry kind="src" path="srcEx01"/>
 	<classpathentry kind="src" path="srcEx03"/>
+	<classpathentry kind="src" path="srcEx04"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="/Users/theowinter/Dropbox/Libraries/rabbitmq-java-client-bin-3.2.4/rabbitmq-client.jar">
 		<attributes>
